# torii-beacon

./: .gitignore  .tool-versions  README.md  Scarb.toml  package-lock.json  package.json
dojo-example/: .tool-versions  Scarb.toml
dojo-example/src/: components.cairo  contract.cairo  models.cairo
entity-example/: .tool-versions  Scarb.toml
entity-example/src/: contract.cairo
example/: .tool-versions  Scarb.toml
example/src/: components.cairo  contract.cairo  lib.cairo  models.cairo  systems.cairo
example_2/: Scarb.toml
example_2/src/: lib.cairo
examples/component/: Scarb.toml
examples/component/src/: lib.cairo
macros/: Cargo.toml  Scarb.toml
macros/src/: beacon_entity.rs  bytearrays_hash.rs  hash_byte_arrays.rs  introspect.rs  lib.rs  model.patch.cairo  model.rs  print_tree.rs  schema.patch.cairo  schema.rs  type_parsers.rs  type_reading.rs
scripts/: deploy.js
src/: beacon.cairo  errors.cairo  lib.cairo  micro_world.cairo  model.cairo  models.cairo  owners.cairo  resource.cairo  schema.cairo  serialized_data.cairo  starknet.cairo  storage.cairo  writers.cairo
src/beacon/: components.cairo  contract.cairo  dojo.cairo  interface.cairo  model.cairo
src/dojo/: arg_ns.cairo  const_ns.cairo  const_ns_model.cairo  model.cairo  schema.cairo  state_ns.cairo  traits.cairo
src/dojo_beacon/: components.cairo  contract.cairo
src/emitter/: component.cairo  const_entity.cairo  entity.cairo  implementation.cairo  registry.cairo  syscalls.cairo  traits.cairo
src/example/: contract.cairo
src/model/: interface.cairo  namespace.cairo
src/registry/: component.cairo
src/resource/: component.cairo  emitter.cairo  model.cairo  resource.cairo
src/tests/: starknet.cairo  utils.cairo
src/utils/: pedersen.cairo  poseidon.cairo  serde.cairo  starknet.cairo
